FIX Contact overlap mobile

--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -27,7 +27,7 @@
 	.google-maps {
 		position: relative;
 		padding-bottom: 75%; // This is the aspect ratio
-		height: 0;
+		height: 15em;
 		overflow: hidden;
 	}
 	.google-maps iframe {
